--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     </table>
                                 </div>
                                 <div class="link">
-                                    <a href="https://jioim.github.io/work_009_new/" target="_blank">WEB</a>
+                                    <a href="https://jioim.github.io/BangOlufsen_/" target="_blank">WEB</a>
                                     <a href="" target="_blank">FIGMA</a>
                                     <a href="https://www.bang-olufsen.com/ko/kr" target="_blank">ORIGINAL</a>
                                 </div>
