--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p1">
+                <section id="portfolio01" class="portfolio section fp-auto-height-responsive" data-anchor="p1">
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content">
                         <div class="mockup">
@@ -101,7 +101,7 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, 모바일 반응형 (1200px, 768px, 500px)</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
@@ -112,22 +112,27 @@
                                                 <td>Pretendard, Google Material Icons</td>
                                             </tr>
                                             <tr>
-                                                <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <th>MAIN COLOR</th>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                                 <div class="link">
                                     <a href="https://jioim.github.io/BangOlufsen/" target="_blank">WEB</a>
-                                    <a href="" target="_blank">FIGMA</a>
+                                    <!-- <a href="" target="_blank">FIGMA</a> -->
                                     <a href="https://www.bang-olufsen.com/ko/kr" target="_blank">ORIGINAL</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p2">
+                <section id="portfolio02" class="portfolio section fp-auto-height-responsive" data-anchor="p2">
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content inner2 ">
                         <div class="mockup2">
@@ -157,7 +162,7 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, 모바일 반응형 (1200px, 768px, 500px)</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
@@ -165,11 +170,16 @@
                                             </tr>
                                             <tr>
                                                 <th>FONT</th>
-                                                <td>Pretendard, Google Material Icons</td>
+                                                <td>Noto Serif KR, Pretendard, Google Material Icons</td>
                                             </tr>
                                             <tr>
                                                 <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -184,7 +194,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p3">
+                <section id="portfolio03" class="portfolio section fp-auto-height-responsive" data-anchor="p3">
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content">
                         <div class="mockup">
@@ -215,11 +225,11 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, 모바일 반응형 (1200px, 768px, 500px)</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
-                                                <td>HTML5, SCSS, jQuery, Swiper</td>
+                                                <td>HTML5, SCSS, jQuery, SlickSlider</td>
                                             </tr>
                                             <tr>
                                                 <th>FONT</th>
@@ -227,7 +237,12 @@
                                             </tr>
                                             <tr>
                                                 <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -242,7 +257,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p4">
+                <section id="portfolio04" class="portfolio section fp-auto-height-responsive" data-anchor="p4">
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content inner2 ">
                         <div class="mockup2">
@@ -272,26 +287,31 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, 모바일 반응형 (1200px, 768px, 500px)</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
-                                                <td>HTML5, SCSS, jQuery, Swiper</td>
+                                                <td>HTML5, SCSS, jQuery, SlickSlider</td>
                                             </tr>
                                             <tr>
                                                 <th>FONT</th>
-                                                <td>Pretendard, Google Material Icons</td>
+                                                <td>Pretendard</td>
                                             </tr>
                                             <tr>
                                                 <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                                 <div class="link">
                                     <a href="https://jioim.github.io/KtG/" target="_blank">WEB</a>
-                                    <a href="" target="_blank">FIGMA</a>
+                                    <!-- <a href="" target="_blank">FIGMA</a> -->
                                     <a href="https://scholarship.ktngtogether.com/index.do" target="_blank">ORIGINAL</a>
                                 </div>
                                
@@ -299,22 +319,21 @@
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p5">
+                <section id="portfolio05" class="portfolio section fp-auto-height-responsive" data-anchor="p5">
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content">
                         <div class="mockup">
                             <div class="frame_mac">
                                 <img src="./images/mockup_w4.jpg" alt="">
                             </div>
-                            <div class="frame_phone">
+                            <!-- <div class="frame_phone">
                                 <img src="./images/mockup_p1.jpg" alt="">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="desc">
                             <div class="desc_tit">
                                 <strong data-tit="ModernHouse">Modern House</strong>
                                 <span>모던하우스</span>
-                                
                             </div>
                             <div class="desc_info">
                                 <p>심플하지만 딱딱함이 느껴지지 않게 리디자인했습니다.<br />
@@ -329,19 +348,24 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, standard web</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
-                                                <td>HTML5, SCSS, jQuery, Swiper</td>
+                                                <td>HTML5, SCSS, jQuery, SlickSlider</td>
                                             </tr>
                                             <tr>
                                                 <th>FONT</th>
-                                                <td>Pretendard, Google Material Icons</td>
+                                                <td>Pretendard, XeIcon</td>
                                             </tr>
                                             <tr>
                                                 <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -356,7 +380,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="portfolio section fp-auto-height-responsive" data-anchor="p6">  
+                <section id="portfolio06" class="portfolio section fp-auto-height-responsive" data-anchor="p6">  
                     <h2 class="blind">portfolio</h2>
                     <div class="inner_content inner2">
                         <div class="mockup2">
@@ -386,11 +410,11 @@
                                         <tbody>
                                             <tr>
                                                 <th>TYPE</th>
-                                                <td>개인 작업 100%, 모바일 반응형 (768px)</td>
+                                                <td>개인 작업 100%, Fullpage</td>
                                             </tr>
                                             <tr>
                                                 <th>TOOLS</th>
-                                                <td>HTML5, SCSS, jQuery, Swiper</td>
+                                                <td>HTML5, SCSS, jQuery, Swiper, fullpage.js</td>
                                             </tr>
                                             <tr>
                                                 <th>FONT</th>
@@ -398,14 +422,19 @@
                                             </tr>
                                             <tr>
                                                 <th>COLOR</th>
-                                                <td>lorn, icon, jquery</td>
+                                                <td>
+                                                    <div class="colors">
+                                                        <span></span>
+                                                        <span></span>
+                                                    </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                                 <div class="link">
                                     <a href="https://jioim.github.io/PaulBassett/" target="_blank">WEB</a>
-                                    <a href="" target="_blank">FIGMA</a>
+                                    <!-- <a href="" target="_blank">FIGMA</a> -->
                                     <a href="https://www.baristapaulbassett.co.kr/Index.pb" target="_blank">ORIGINAL</a>
                                 </div>
                             </div>
@@ -635,7 +664,7 @@
                                 <div class="prof row">
                                     <div class="photo">
                                         <figure class="portrait">
-                                            <img src="./images/portrait.jpg" alt="">
+                                            <img src="./images/portrait.png" alt="">
                                         </figure>
                                     </div>
                                     <div class="name">
