--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <div class="clip"></div>
                             <p>
                                 그리드에서부터 차근차근 시작하는 디자인<br />
-                                기본을 지키는 웹디자이너/퍼블리셔 Jey Im 입니다.
+                                기본을 지키는 웹디자이너/퍼블리셔 임지오 입니다.
                             </p>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                                 <img src="./images/mockup_w6.jpg" alt="">
                             </div>
                             <div class="frame_phone">
-                                <img src="./images/mockup_p1.jpg" alt="">
+                                <img src="./images/mockup_p3.jpg" alt="">
                             </div>
                         </div>
                         <div class="desc">
@@ -265,7 +265,7 @@
                         <img src="./images/mockup_w5.jpg" alt="">
                     </div>
                     <div class="frame_phone">
-                        <img src="./images/mockup_p1.jpg" alt="">
+                        <img src="./images/mockup_p4.png" alt="">
                     </div>
                         </div>
                         <div class="desc">
